# SongDatabase

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml
.github/workflows/: main.yml
database/: database.sqlite
src/songdatabase/: app.py  config.py  database.py  logger.py  queries.py
src/songdatabase/errors/: __init__.py  app_error.py  database_error.py
src/songdatabase/gui/: __init__.py  create_entry_dialog.py  delete_entry_dialog.py  input_dialog.py  main_window.py  song_input_dialog.py  song_update_dialog.py  table_dialog.py  update_entry_dialog.py
